# package-PipeVal

./: pyproject.toml
.github/workflows/: pytest.yaml
pipeval/validate/: files.py
pipeval/validate/validators/: fastq.py
test/unit/: test_generate_checksum.py  test_validate.py
